--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -1,106 +1,3 @@
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
-
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-body {
-    line-height:1;
-}
-
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-    display:block;
-}
-
-nav ul {
-    list-style:none;
-}
-
-blockquote, q {
-    quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000; 
-    font-style:italic;
-    font-weight:bold;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;   
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-
-input, select {
-    vertical-align:middle;
-}
-
 @font-face {
     font-family: 'playfair_display';
     src: url('../../Static/font/playfairdisplay/playfairdisplay-regular-webfont.eot');
@@ -179,13 +76,17 @@ a#logo img{
 }
 
 nav#sidebar{
-    background:#14042d;
+    background-color:#14042d;
+    background-image:url('../images/sidebar.png');
+    background-size:100% auto;
     position:absolute;
     top:0;
     right:0;
     width:10%;
-    height:95%;
+    height:89%;
+    padding:2% 0;
     display:block;
+    z-index:9;
 }
 
 nav#sidebar > a{
@@ -198,7 +99,9 @@ nav#sidebar > a{
     text-transform:uppercase;
     font-family:'proxima_nova';
     text-align:center;
-    font-size:60%;
+    font-size:0.55em;
+    padding:17% 0;
+    font-weight:bold;
 }
 
 nav#sidebar > a > label{
@@ -209,7 +112,7 @@ nav#sidebar > a > img{
     display:block;
     width:25%;
     height:auto;
-    margin:0 auto;
+    margin:0 auto 1.25em;
 }
 
 nav#footer{
@@ -288,7 +191,7 @@ nav#footer > a{
 }
 
 .games{
-    width:100%;
+    width:200%;
     height:100%;
     display:block;
     -webkit-transform:skewX(10deg);
