--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -58,6 +58,7 @@ a{
     height:100%;
     position:relative;
     background:#e7e7e7;
+    overflow:hidden;
 }
 
 a#logo{
@@ -75,22 +76,27 @@ a#logo img{
     height:auto;
 }
 
-nav#sidebar{
+div#sidebar{
+    width:10%;
+    position:absolute;        
+    top:0;
+    right:0;
+    z-index:9;
+    height:100%;
+}
+
+nav#sidebar-menu{
     background-color:#14042d;
     background-image:url('../images/sidebar.png');
     background-size:100% auto;
-    position:absolute;
-    top:0;
-    right:0;
-    width:10%;
+    width:100%;
     height:89%;
     padding:2% 0;
-    display:block;
-    z-index:9;
+    display:block;    
     overflow:hidden;
 }
 
-nav#sidebar > a{
+nav#sidebar-menu > a{
     display:block;
     height:10%;
     background-repeat:no-repeat;
@@ -105,15 +111,24 @@ nav#sidebar > a{
     font-weight:bold;
 }
 
-nav#sidebar > a > label{
+nav#sidebar-menu > a > label{
     display:block;
 }
 
-nav#sidebar > a > img{
+nav#sidebar-menu > a > img{
     display:block;
     width:25%;
     height:auto;
     margin:0 auto 1.25em;
+}
+
+div#sidebar-hidemenu{
+    width:300%;
+    position:absolute;
+    top:0;
+    right:-300%;
+    height:100%;
+    background-color:#2e2f44;
 }
 
 nav#footer{
