--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -204,9 +204,9 @@ nav#footer > a{
     width: 100%;
     position:absolute;
 
-    -webkit-transform:matrix(1, -5,67128181961771, 0, 1, 0, 0);
-    -moz-transform:matrix(1, -5,67128181961771, 0, 1, 0, 0);
-    transform: matrix(1, -5,67128181961771, 0, 1, 0, 0);
+    -webkit-transform:matrix(1, -5.6712818196177, 0, 1, 0, 0);
+    -moz-transform:matrix(1, -5.6712818196177, 0, 1, 0, 0);
+    transform: matrix(1, -5.6712818196177, 0, 1, 0, 0);
 }
 
 .games{
@@ -214,7 +214,7 @@ nav#footer > a{
     height:100%;
     display:block;
 
-    -moz-transform:matrix(1, 5,67128181961771, 0, 1, 0, 0);
-    -webkit-transform:matrix(1, 5,67128181961771, 0, 1, 0, 0);
-    transform: matrix(1, 5,67128181961771, 0, 1, 0, 0);
+    -moz-transform:matrix(1, 5.6712818196177, 0, 1, 0, 0);
+    -webkit-transform:matrix(1, 5.6712818196177, 0, 1, 0, 0);
+    transform: matrix(1, 5.6712818196177, 0, 1, 0, 0);
 }
