--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -197,24 +197,33 @@ nav#footer > a{
 }
 
 .games-container{
-    background: none repeat scroll 0 0 #ffa72a;
     height: 100%;
     margin-left: 50%;
     overflow: hidden;
     width: 100%;
     position:absolute;
+    display:block;
 
-    -webkit-transform:matrix(1, -5.6712818196177, 0, 1, 0, 0);
-    -moz-transform:matrix(1, -5.6712818196177, 0, 1, 0, 0);
-    transform: matrix(1, -5.6712818196177, 0, 1, 0, 0);
+    -webkit-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
+    -moz-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
+    transform: matrix(1, 0, -0.1763269807084645, 1, 0, 0);
+    
+    -webkit-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    transform-origin: 0 0;
 }
 
 .games{
-    width:200%;
+    background: none repeat scroll 0 0 #ffa72a;
+    width:100%;
     height:100%;
     display:block;
-
-    -moz-transform:matrix(1, 5.6712818196177, 0, 1, 0, 0);
-    -webkit-transform:matrix(1, 5.6712818196177, 0, 1, 0, 0);
-    transform: matrix(1, 5.6712818196177, 0, 1, 0, 0);
+    margin-left:-2.9%;
+    -webkit-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
+    -moz-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
+    transform: matrix(1, 0, 0.1763269807084645, 1, 0, 0);
+    
+    -webkit-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    transform-origin: 0 0;
 }
