--- a/html/css/mobile.css
+++ b/html/css/mobile.css
@@ -39,6 +39,7 @@
         -webkit-transform:matrix(1, 0, 0, 1, 0, 0);
         -moz-transform:matrix(1, 0, 0, 1, 0, 0);
         transform: matrix(1, 0, 0, 1, 0, 0);
+        margin-left:0 !important;
     }
     
     .games{
