--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -200,14 +200,15 @@ nav#footer > a{
     height: 100%;
     margin-left: 50%;
     overflow: hidden;
-    width: 100%;
+    /*width: 100%;*/
+    width:auto;
     position:absolute;
     display:block;
 
     -webkit-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
     -moz-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
     transform: matrix(1, 0, -0.1763269807084645, 1, 0, 0);
-    
+
     -webkit-transform-origin: 0 0;
     -moz-transform-origin: 0 0;
     transform-origin: 0 0;
@@ -215,14 +216,13 @@ nav#footer > a{
 
 .games{
     background: none repeat scroll 0 0 #ffa72a;
-    width:100%;
     height:100%;
     display:block;
-    margin-left:-2.9%;
+    margin-left:-14%;
     -webkit-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
     -moz-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
     transform: matrix(1, 0, 0.1763269807084645, 1, 0, 0);
-    
+
     -webkit-transform-origin: 0 0;
     -moz-transform-origin: 0 0;
     transform-origin: 0 0;
