--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -77,23 +77,27 @@ a#logo img{
 }
 
 div#sidebar{
-    width:10%;
+    width:40%;
     position:absolute;        
     top:0;
     right:0;
     z-index:9;
     height:100%;
+    right: -29.5%;
 }
 
 nav#sidebar-menu{
     background-color:#14042d;
     background-image:url('../images/sidebar.png');
     background-size:100% auto;
-    width:100%;
-    height:89%;
-    padding:2% 0;
+    width:25%;
+    height:100%;
+    padding:0;
     display:block;    
-    overflow:hidden;
+    /*overflow:hidden;*/
+    position:absolute;
+    top:0;
+    left:0;
 }
 
 nav#sidebar-menu > a{
@@ -123,10 +127,10 @@ nav#sidebar-menu > a > img{
 }
 
 div#sidebar-hidemenu{
-    width:300%;
+    width:75%;
     position:absolute;
     top:0;
-    right:-300%;
+    right:0;
     height:100%;
     background-color:#2e2f44;
 }
