--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -46,6 +46,8 @@ html, body { height: 100%; }
 
 body{
     font-family: 'source_sans_pro';
+    -webkit-user-select:none;
+    -webkit-text-size-adjust:none;
 }
 
 a{
@@ -167,6 +169,7 @@ nav#footer > a{
 .category{
     width:100%;
     height:100%;
+    overflow-x:scroll;
 }
 
 .category-description-container{
@@ -175,6 +178,7 @@ nav#footer > a{
     display: table; 
     position:absolute;
     left:15.4%;
+    z-index:-1;
 }
 
 .category-description{
@@ -206,7 +210,7 @@ nav#footer > a{
     overflow: hidden;
     width: 100%;
     /*width:auto;*/
-    position:absolute;
+    /*position:absolute;*/
     display:block;
 
     -webkit-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
