Structure set, basing styles on flat ui. Only working on web now.

--- a/Static/core/loader/loader.less
+++ b/Static/core/loader/loader.less
@@ -54,6 +54,6 @@
     line-height:30px;
     top:50%;
     margin-top:-15px;
-    font-family: 'Serifa';
+    font-family: Verdana;
     text-transform:uppercase;
 }
