--- a/Static/less/forms.less
+++ b/Static/less/forms.less
@@ -8,7 +8,7 @@
 
 // Make all forms have space below them
 form {
-  margin: 0 0 @formLineHeight;
+  margin: 0 0 @baseLineHeight;
 }
 
 fieldset {
@@ -20,18 +20,19 @@ fieldset {
 // Groups of fields with labels on top (legends)
 legend {
   display: block;
+  text-align:center;
   width: 100%;
   padding: 0;
-  margin-bottom: @formLineHeight;
-  font-size: @formFontSize * 1.5;
-  line-height: @formLineHeight * 2;
+  margin-bottom: @baseLineHeight;
+  font-size: @baseFontSize * 1.5;
+  line-height: @baseLineHeight * 2;
   color: @grayDark;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 
   // Small
   small {
-    font-size: @formLineHeight * .75;
+    font-size: @baseLineHeight * .75;
     color: @grayLight;
   }
 }
@@ -42,7 +43,7 @@ input,
 button,
 select,
 textarea {
-  #font > .shorthand(@formFontSize,normal,@formLineHeight); // Set size, weight, line-height here
+  #font > .shorthand(@baseFontSize,normal,@baseLineHeight); // Set size, weight, line-height here
 }
 input,
 button,
@@ -79,13 +80,14 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   display: inline-block;
-  height: @formLineHeight;
-  padding: 10px 6px;
-  margin-bottom: 12px;
-  font-size: @formFontSize;
-  line-height: @formLineHeight;
+  height: @baseLineHeight;
+  padding: 4px 6px;
+  margin-bottom: @baseLineHeight / 2;
+  font-size: @baseFontSize;
+  line-height: @baseLineHeight;
   color: @gray;
   .border-radius(@inputBorderRadius);
+  vertical-align: middle;
 }
 
 // Reset appearance properties for textual inputs and textarea
@@ -118,15 +120,15 @@ input[type="color"],
 .uneditable-input {
   background-color: @inputBackground;
   border: 1px solid @inputBorder;
-  .box-shadow(0 2px 2px rgba(0,0,0,.1));
+  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   .transition(~"border linear .2s, box-shadow linear .2s");
 
   // Focus state
   &:focus {
-    border-color: 1px solid @inputBorder;
+    border-color: rgba(82,168,236,.8);
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
-    .box-shadow(0 4px 4px rgba(0,0,0,.2));
+    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
   }
 }
 
@@ -137,7 +139,6 @@ input[type="checkbox"] {
   *margin-top: 0; /* IE7 */
   margin-top: 1px \9; /* IE8-9 */
   line-height: normal;
-  cursor: pointer;
 }
 
 // Reset width of input images, buttons, radios, checkboxes
@@ -154,18 +155,16 @@ input[type="checkbox"] {
 // Set the height of select and file controls to match text inputs
 select,
 input[type="file"] {
-  height: 42px; /* In IE7, the height of the select element cannot be changed by height, only font-size */
+  height: @inputHeight; /* In IE7, the height of the select element cannot be changed by height, only font-size */
   *margin-top: 4px; /* For IE7, add top margin to align select with labels */
-  line-height: 42px;
+  line-height: @inputHeight;
 }
 
 // Make select elements obey height by applying a border
 select {
-  width: 240px; // default input width + 10px of padding that doesn't get applied
+  width: 220px; // default input width + 10px of padding that doesn't get applied
   border: 1px solid @inputBorder;
   background-color: @inputBackground; // Chrome on Linux and Mobile Safari need background-color
-  padding-top:8px;
-  padding-bottom:8px;
 }
 
 // Make multiple select elements height not fixed
@@ -212,14 +211,10 @@ input[type="checkbox"]:focus {
 // Placeholder
 // -------------------------
 
-// Placeholder text gets special styles because when browsers invalidate entire lines if it doesn’t understand a selector
+// Placeholder text gets special styles because when browsers invalidate entire lines if it doesn't understand a selector
 input,
 textarea {
-  .placeholder(@grayLight);
-}
-.placeholder{
-	color: @grayLight;
-	text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
+  .placeholder();
 }
 
 
@@ -229,13 +224,13 @@ textarea {
 // Indent the labels to position radios/checkboxes as hanging
 .radio,
 .checkbox {
-  min-height: 18px; // clear the floating input if there is no label text
-  padding-left: 18px;
+  min-height: @baseLineHeight; // clear the floating input if there is no label text
+  padding-left: 20px;
 }
 .radio input[type="radio"],
 .checkbox input[type="checkbox"] {
   float: left;
-  margin-left: -18px;
+  margin-left: -20px;
 }
 
 // Move the options list down to align with labels
@@ -310,8 +305,17 @@ textarea[class*="span"],
 .controls-row {
   .clearfix(); // Clear the float from controls
 }
-.controls-row [class*="span"] {
-  float: left; // Float to collapse white-space for proper grid alignment
+
+// Float to collapse white-space for proper grid alignment
+.controls-row [class*="span"],
+// Redeclare the fluid grid collapse since we undo the float for inputs
+.row-fluid .controls-row [class*="span"] {
+  float: left;
+}
+// Explicity set top padding on all checkboxes/radios, not just first-child
+.controls-row .checkbox[class*="span"],
+.controls-row .radio[class*="span"] {
+  padding-top: 5px;
 }
 
 
@@ -352,61 +356,26 @@ input[type="checkbox"][readonly] {
 .control-group.error {
   .formFieldState(@errorText, @errorText, @errorBackground);
 }
-// Style inputs accordingly
-  .checkbox.error,
-  .radio.error,
-  input.error,
-  select.error,
-  textarea.error {
-    color: @errorText;
-  }
-  input.error,
-  select.error,
-  textarea.error {
-    border-color: @errorText;
-    background-color: @errorBackground;
-    &:focus {
-      border-color: darken(@errorText, 10%);
-    }
-  }
-
 // Success
 .control-group.success {
   .formFieldState(@successText, @successText, @successBackground);
 }
-
-// Style inputs accordingly
-  .checkbox.success,
-  .radio.success,
-  input.success,
-  select.success,
-  textarea.success {
-    color: @successText;
-  }
-  input.success,
-  select.success,
-  textarea.success {
-    border-color: @successText;
-    background-color: @successBackground;
-    &:focus {
-      border-color: darken(@successText, 10%);
-    }
-  }
-// Info
+// Success
 .control-group.info {
   .formFieldState(@infoText, @infoText, @infoBackground);
 }
 
 // HTML5 invalid states
 // Shares styles with the .control-group.error above
-input:focus:required:invalid,
-textarea:focus:required:invalid,
-select:focus:required:invalid {
+input:focus:invalid,
+textarea:focus:invalid,
+select:focus:invalid {
   color: #b94a48;
   border-color: #ee5f5b;
   &:focus {
     border-color: darken(#ee5f5b, 10%);
-    .box-shadow(0 0 6px lighten(#ee5f5b, 20%));
+    @shadow: 0 0 6px lighten(#ee5f5b, 20%);
+    .box-shadow(@shadow);
   }
 }
 
@@ -416,9 +385,9 @@ select:focus:required:invalid {
 // ------------
 
 .form-actions {
-  padding: (@formLineHeight - 1) 20px @formLineHeight;
-  margin-top: @formLineHeight;
-  margin-bottom: @formLineHeight;
+  padding: (@baseLineHeight - 1) 20px @baseLineHeight;
+  margin-top: @baseLineHeight;
+  margin-bottom: @baseLineHeight;
   background-color: @formActionsBackground;
   border-top: 1px solid #e5e5e5;
   .clearfix(); // Adding clearfix to allow for .pull-right button containers
@@ -436,7 +405,7 @@ select:focus:required:invalid {
 
 .help-block {
   display: block; // account for any element using help-block
-  margin-bottom: @formLineHeight / 2;
+  margin-bottom: @baseLineHeight / 2;
 }
 
 .help-inline {
@@ -454,9 +423,20 @@ select:focus:required:invalid {
 // Allow us to put symbols and text within the input field for a cleaner look
 .input-append,
 .input-prepend {
-  margin-bottom: 5px;
-  font-size: 0;
+  display: inline-block;
+  margin-bottom: @baseLineHeight / 2;
+  vertical-align: middle;
+  font-size: 0; // white space collapse hack
   white-space: nowrap; // Prevent span and input from separating
+
+  // Reset the white space collapse hack
+  input,
+  select,
+  .uneditable-input,
+  .dropdown-menu,
+  .popover {
+    font-size: @baseFontSize;
+  }
 
   input,
   select,
@@ -464,7 +444,6 @@ select:focus:required:invalid {
     position: relative; // placed here by default so that on :focus we can place the input above the .add-on for full border and box-shadow goodness
     margin-bottom: 0; // prevent bottom margin from screwing up alignment in stacked forms
     *margin-left: 0;
-    font-size: @formFontSize;
     vertical-align: top;
     .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
     // Make input on top when focused so blue border and shadow always show
@@ -475,20 +454,20 @@ select:focus:required:invalid {
   .add-on {
     display: inline-block;
     width: auto;
-    height: @formLineHeight;
+    height: @baseLineHeight;
     min-width: 16px;
-    padding: 10px 5px;
-	.box-shadow(0 2px 2px rgba(0,0,0,.1));
-    font-size: @formFontSize;
+    padding: 4px 5px;
+    font-size: @baseFontSize;
     font-weight: normal;
-    line-height: @formLineHeight;
+    line-height: @baseLineHeight;
     text-align: center;
     text-shadow: 0 1px 0 @white;
     background-color: @grayLighter;
     border: 1px solid #ccc;
   }
   .add-on,
-  .btn {
+  .btn,
+  .btn-group > .dropdown-toggle {
     vertical-align: top;
     .border-radius(0);
   }
@@ -497,6 +476,7 @@ select:focus:required:invalid {
     border-color: @green;
   }
 }
+
 .input-prepend {
   .add-on,
   .btn {
@@ -504,30 +484,41 @@ select:focus:required:invalid {
   }
   .add-on:first-child,
   .btn:first-child {
+    // FYI, `.btn:first-child` accounts for a button group that's prepended
     .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
   }
 }
+
 .input-append {
   input,
   select,
   .uneditable-input {
     .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
+    + .btn-group .btn:last-child {
+      .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
+    }
   }
   .add-on,
-  .btn {
+  .btn,
+  .btn-group {
     margin-left: -1px;
   }
   .add-on:last-child,
-  .btn:last-child {
+  .btn:last-child,
+  .btn-group:last-child > .dropdown-toggle {
     .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
   }
 }
+
 // Remove all border-radius for inputs with both prepend and append
 .input-prepend.input-append {
   input,
   select,
   .uneditable-input {
     .border-radius(0);
+    + .btn-group .btn {
+      .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
+    }
   }
   .add-on:first-child,
   .btn:first-child {
@@ -539,7 +530,11 @@ select:focus:required:invalid {
     margin-left: -1px;
     .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
   }
+  .btn-group:first-child {
+    margin-left: 0;
+  }
 }
+
 
 
 
@@ -637,12 +632,12 @@ input.search-query {
 
 // Margin to space out fieldsets
 .control-group {
-  margin-bottom: @formLineHeight / 2;
+  margin-bottom: @baseLineHeight / 2;
 }
 
 // Legend collapses margin, so next element is responsible for spacing
 legend + .control-group {
-  margin-top: @formLineHeight;
+  margin-top: @baseLineHeight;
   -webkit-margin-top-collapse: separate;
 }
 
@@ -652,7 +647,7 @@ legend + .control-group {
 .form-horizontal {
   // Increase spacing between groups
   .control-group {
-    margin-bottom: @formLineHeight;
+    margin-bottom: @baseLineHeight;
     .clearfix();
   }
   // Float the labels left
@@ -681,9 +676,12 @@ legend + .control-group {
   // And apply it only to .help-block instances that follow a form control
   input,
   select,
-  textarea {
+  textarea,
+  .uneditable-input,
+  .input-prepend,
+  .input-append {
     + .help-block {
-      margin-top: @formLineHeight / 2;
+      margin-top: @baseLineHeight / 2;
     }
   }
   // Move over buttons in .form-actions to align with .controls
