--- a/Static/less/accordion.less
+++ b/Static/less/accordion.less
@@ -11,7 +11,8 @@
 // Group == heading + body
 .accordion-group {
   margin-bottom: 2px;
-  .border-radius(4px);
+  border: 1px solid #e5e5e5;
+  .border-radius(@baseBorderRadius);
 }
 .accordion-heading {
   border-bottom: 0;
@@ -29,4 +30,5 @@
 // Inner needs the styles because you can't animate properly with any styles on the element
 .accordion-inner {
   padding: 9px 15px;
+  border-top: 1px solid #e5e5e5;
 }
