--- a/Static/less/bootstrap.less
+++ b/Static/less/bootstrap.less
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.1.1
+ * Bootstrap v2.3.2
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -8,12 +8,12 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
-// CSS Reset
-@import "reset.less";
-
 // Core variables and mixins
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
 @import "mixins.less";
+
+// CSS Reset
+@import "reset.less";
 
 // Grid system and page structure
 @import "scaffolding.less";
@@ -22,15 +22,15 @@
 
 // Base CSS
 @import "type.less";
-//@import "code.less";
+@import "code.less";
 @import "forms.less";
 @import "tables.less";
 
 // Components: common
-@import "font-awesome.less";
+@import "sprites.less";
 @import "dropdowns.less";
 @import "wells.less";
-//@import "component-animations.less";
+@import "component-animations.less";
 @import "close.less";
 
 // Components: Buttons & Alerts
@@ -41,9 +41,9 @@
 // Components: Nav
 @import "navs.less";
 @import "navbar.less";
-//@import "breadcrumbs.less";
-//@import "pagination.less";
-//@import "pager.less";
+@import "breadcrumbs.less";
+@import "pagination.less";
+@import "pager.less";
 
 // Components: Popovers
 @import "modals.less";
@@ -51,21 +51,17 @@
 @import "popovers.less";
 
 // Components: Misc
-//@import "thumbnails.less";
+@import "thumbnails.less";
+@import "media.less";
 @import "labels-badges.less";
-//@import "progress-bars.less";
+@import "progress-bars.less";
 @import "accordion.less";
-//@import "carousel.less";
-//@import "hero-unit.less";
-@import "datepicker.less";
-
-// Specifics theme.
-@import "theme.less";
-@import "promo.less";
-@import "start.less";
-@import "gb.less";
-@import "choose-country.less";
-@import "serifa.less";
+@import "carousel.less";
+@import "hero-unit.less";
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+
+//Flat theme
+@import "flat/flat-ui.less";
+
