--- a/Static/less/close.less
+++ b/Static/less/close.less
@@ -5,17 +5,18 @@
 
 .close {
   float: right;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
-  line-height: 30px;
+  line-height: @baseLineHeight;
   color: @black;
   text-shadow: 0 1px 0 rgba(255,255,255,1);
-  .opacity(60);
-  &:hover {
+  .opacity(20);
+  &:hover,
+  &:focus {
     color: @black;
     text-decoration: none;
     cursor: pointer;
-    .opacity(80);
+    .opacity(40);
   }
 }
 
