--- a/Static/less/modals.less
+++ b/Static/less/modals.less
@@ -1,13 +1,6 @@
-// MODALS
-// ------
-
-// Recalculate z-index where appropriate
-.modal-open {
-  .dropdown-menu {  z-index: @zindexDropdown + @zindexModal; }
-  .dropdown.open { *z-index: @zindexDropdown + @zindexModal; }
-  .popover       {  z-index: @zindexPopover  + @zindexModal; }
-  .tooltip       {  z-index: @zindexTooltip  + @zindexModal; }
-}
+//
+// Modals
+// --------------------------------------------------
 
 // Background
 .modal-backdrop {
@@ -17,7 +10,7 @@
   bottom: 0;
   left: 0;
   z-index: @zindexModalBackdrop;
-  background-color: #508CA5;
+  background-color: @black;
   // Fade for backdrop
   &.fade { opacity: 0; }
 }
@@ -30,33 +23,45 @@
 // Base modal
 .modal {
   position: fixed;
+  top: 10%;
   left: 50%;
   z-index: @zindexModal;
-  overflow: hidden;
   width: 560px;
-  background-color: #fff;
-  background-color: rgba(255,255,255,.9);
+  margin-left: -280px;
+  background-color: @white;
   border: 1px solid #999;
-  border: 1px solid rgba(255,255,255,.3);
+  border: 1px solid rgba(0,0,0,.3);
+  *border: 1px solid #999; /* IE6-7 */
   .border-radius(3px);
-  .box-shadow(0 3px 20px rgba(0,0,0,0.3));
-  /*.box-shadow(0 2px 2px rgba(0,0,0,0.2),0 1px 5px rgba(0,0,0,0.2),0 0 0 12px rgba(255,255,255,0.4));*/ 
+  .box-shadow(0 2px 3px rgba(0,0,0,0.3));
   .background-clip(padding-box);
-  h1{
-	display:none;
+  // Remove focus outline from opened modal
+  outline: none;
+
+  &.fade {
+    .transition(e('opacity .3s linear, top .3s ease-out'));
+    top: -25%;
   }
+  &.fade.in { top: 10%; }
 }
 .modal-header {
   padding: 9px 15px;
-  background-color: transparent;
+  border-bottom: 1px solid #eee;
   // Close icon
   .close { margin-top: 2px; }
+  // Heading
+  h3 {
+    margin: 0;
+    line-height: 30px;
+  }
 }
 
 // Body (where all modal content resides)
 .modal-body {
+  position: relative;
+  overflow-y: auto;
+  max-height: 400px;
   padding: 15px;
-  min-height:200px;
 }
 // Remove bottom margin if need be
 .modal-form {
@@ -82,5 +87,9 @@
   // but override that for button groups
   .btn-group .btn + .btn {
     margin-left: -1px;
+  }
+  // and override it for block buttons as well
+  .btn-block + .btn-block {
+    margin-left: 0;
   }
 }
