Updates to faked ajax-calls (fixtures). Need to run the project through a web server to work.

--- a/Static/less/flat/modules/switch.less
+++ b/Static/less/flat/modules/switch.less
@@ -15,7 +15,7 @@
   position: relative;
   text-align: left;
   width: @switch-width;
-  .mask(~"url('../images/switch/mask.png') 0 0 no-repeat");
+  .mask(~"url('static/img/switch/mask.png') 0 0 no-repeat");
   .user-select(none);
 
   &.deactivate {
