Box-sizing changed for everything to set width=width+padding+border

--- a/Static/less/reset.less
+++ b/Static/less/reset.less
@@ -3,6 +3,8 @@
 // Adapted from http://github.com/necolas/normalize.css
 // --------------------------------------------------
 
+//box-sizing
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 // Display in IE6-9 and FF3
 // -------------------------
