--- a/Static/garbo/start/start.less
+++ b/Static/garbo/start/start.less
@@ -35,7 +35,7 @@
     right:90px;
     top:10px;
     display:none;
-    width:313px;
+    width:373px;
     background-color: #EDEFF1;
     border-radius: 6px 6px 6px 6px;
     padding: 24px 23px 20px;
@@ -46,7 +46,8 @@
         padding-bottom: 11px;
         padding-top: 11px;
         text-indent: 3px;
-        width: 299px;
+        height:45px;
+        width: 325px;
     }
     .login-field-icon {
         color: #BFC9CA;
