--- a/Static/less/forms.less
+++ b/Static/less/forms.less
@@ -80,7 +80,7 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   display: inline-block;
-  height: @baseLineHeight;
+  height: @baseLineHeight * 1.5;
   padding: 4px 6px;
   margin-bottom: @baseLineHeight / 2;
   font-size: @baseFontSize;
@@ -224,7 +224,7 @@ textarea {
 // Indent the labels to position radios/checkboxes as hanging
 .radio,
 .checkbox {
-  min-height: @baseLineHeight; // clear the floating input if there is no label text
+  min-height: @baseLineHeight * 1.5; // clear the floating input if there is no label text
   padding-left: 20px;
 }
 .radio input[type="radio"],
