--- a/html/css/layout.css
+++ b/html/css/layout.css
@@ -42,6 +42,8 @@
     font-style: normal;
 }
 
+/** { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }*/
+
 html, body { height: 100%; }
 
 body{
@@ -161,7 +163,6 @@ nav#footer > a{
 
 .page{
     width:90%;
-    height:95%;
     position:absolute;
     overflow:hidden;
 }
@@ -170,6 +171,7 @@ nav#footer > a{
     width:100%;
     height:100%;
     overflow-x:scroll;
+    position:relative;
 }
 
 .category-description-container{
@@ -179,6 +181,7 @@ nav#footer > a{
     position:absolute;
     left:15.4%;
     z-index:-1;
+    top:0;
 }
 
 .category-description{
@@ -210,31 +213,15 @@ nav#footer > a{
     overflow: hidden;
     width: 100%;
     /*width:auto;*/
-    /*position:absolute;*/
+    position:relative;
     display:block;
-
-    /*-webkit-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
-    -moz-transform:matrix(1, 0, -0.1763269807084645, 1, 0, 0);
-    transform: matrix(1, 0, -0.1763269807084645, 1, 0, 0);*/
-
-    -webkit-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
-    transform-origin: 0 0;
 }
 
 .games{
     background: none repeat scroll 0 0 #ffa72a;
     height:100%;
-    width:100%;
     display:block;
-    margin-left:-14%;
-    /*-webkit-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
-    -moz-transform:matrix(1, 0, 0.1763269807084645, 1, 0, 0);
-    transform: matrix(1, 0, 0.1763269807084645, 1, 0, 0);*/
-
-    -webkit-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
-    transform-origin: 0 0;
+    position:relative;
 }
 
 .games > div.game{
