--- a/Static/garbo/start/start.less
+++ b/Static/garbo/start/start.less
@@ -1,6 +1,9 @@
 @import "../../less/variables.less";
 @import "../../less/mixins.less";
 
+html, body, #wrapper, #page, .page{
+    height:100%;
+}
 .logged-out .logged-in
 {
     display:none;
@@ -8,53 +11,4 @@
 .logged-in .logged-out
 {
     display:none;
-}
-
-#navbar-user{
-    position:fixed;
-    right:0;
-    top:-100%;
-    height:100%;
-    margin-right:0;
-    .border-radius(0px);
-}
-.login-form:before {
-    border-color: transparent transparent transparent #EDEFF1;
-    border-style: solid;
-    border-width: 12px 0 12px 12px;
-    content: "";
-    height: 0;
-    right: -12px;
-    position: absolute;
-    top: 25px;
-    width: 0;
-}
-.login-form {
-    position: absolute;
-    z-index:10;
-    right:90px;
-    top:10px;
-    display:none;
-    width:373px;
-    background-color: #EDEFF1;
-    border-radius: 6px 6px 6px 6px;
-    padding: 24px 23px 20px;
-    .login-field {
-        border-color: transparent;
-        font-size: 17px;
-        margin-bottom: 10px !important;
-        padding-bottom: 11px;
-        padding-top: 11px;
-        text-indent: 3px;
-        height:45px;
-        width: 325px;
-    }
-    .login-field-icon {
-        color: #BFC9CA;
-        font-size: 16px;
-        position: absolute;
-        right: 13px;
-        top: 14px;
-        transition: all 0.25s ease 0s;
-    }
 }
