--- a/Static/less/flat/config.less
+++ b/Static/less/flat/config.less
@@ -59,7 +59,7 @@
 // Typography
 // -------------------------
 @base-font-family: "Lato", sans-serif;
-@base-font-size: 14px;
+@base-font-size: 100%;
 @base-line-height: 1.231;
 
 // Headings
