--- a/Static/less/flat/modules/iconbar.less
+++ b/Static/less/flat/modules/iconbar.less
@@ -28,9 +28,9 @@
 
 
       > a {
-        color: @inverse;
+        color: #fff;
         display: block;
-        font-size: @base-font-size * 1.714;
+        font-size: 0.9em;
         padding: 8px 30px 32px;
         position: relative;
         text-decoration: none;
