--- a/Static/less/reset.less
+++ b/Static/less/reset.less
@@ -4,7 +4,7 @@
 // --------------------------------------------------
 
 //box-sizing
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+//* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 // Display in IE6-9 and FF3
 // -------------------------
